# Holzweissig_Ezequiel_Parcial2_AyM

./: .env.example  .gitignore  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config.py  extensions.py
app/blueprints/auth/: __init__.py  forms.py  routes.py
app/blueprints/libros/: __init__.py  forms.py  routes.py
app/blueprints/main/: __init__.py  routes.py
app/blueprints/prediccion/: __init__.py  forms.py  routes.py
app/blueprints/prestamos/: __init__.py  forms.py  routes.py
app/blueprints/socios/: __init__.py  forms.py  routes.py
app/models/: __init__.py  ejemplar.py  libro.py  multa.py  prestamo.py  reserva.py  usuario.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: base.html
app/templates/auth/: login.html
app/templates/errors/: 403.html  404.html
app/templates/libros/: detalle.html  form.html  index.html
app/templates/main/: dashboard.html
app/templates/prediccion/: index.html
app/templates/prestamos/: devolucion.html  form.html  index.html
app/templates/socios/: detalle.html  form.html  index.html
ml/: modelo_mora.joblib  train_model.py
