[project]
name = "holzweissig-ezequiel-parcial2-aym"
version = "0.1.0"
description = "Sistema de biblioteca con Flask"
requires-python = ">=3.14"
dependencies = [
	"Flask==3.1.3",
	"Flask-SQLAlchemy==3.1.1",
	"Flask-Login==0.6.3",
	"Flask-Bcrypt==1.0.1",
	"Flask-WTF==1.2.2",
	"WTForms==3.2.1",
	"email-validator==2.3.0",
	"python-dotenv==1.1.1",

	"numpy==2.5.0",
	"pandas==3.0.4",
	"scikit-learn==1.9.0",
	"joblib==1.5.3",

	"SQLAlchemy==2.0.41",
	"psycopg2-binary==2.9.12",
	"gunicorn==23.0.0"
]
